[gd_scene load_steps=4 format=3 uid="uid://b0rxadub3kxpm"]

[ext_resource type="Script" path="res://scripts/events/event_stampede.gd" id="1_mk2sj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hrecx"]
size = Vector2(544, 626)

[sub_resource type="CircleShape2D" id="CircleShape2D_w5agg"]
radius = 229.264

[node name="EventStampede" type="Area2D"]
collision_layer = 128
collision_mask = 4
script = ExtResource("1_mk2sj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_hrecx")
debug_color = Color(0.662745, 0.388235, 0.854902, 0.419608)

[node name="Herd" type="Node2D" parent="."]

[node name="StartPosition" type="Node2D" parent="."]
position = Vector2(0, 1089)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartPosition"]
shape = SubResource("CircleShape2D_w5agg")
debug_color = Color(0.964706, 0.152941, 0.294118, 0.419608)

[node name="EndPosition" type="Area2D" parent="."]
position = Vector2(0, -1318)
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D2" type="CollisionShape2D" parent="EndPosition"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_w5agg")
debug_color = Color(0.964706, 0.152941, 0.294118, 0.419608)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="area_entered" from="." to="." method="stampede_triggered"]
[connection signal="body_entered" from="EndPosition" to="." method="_on_end_position_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
